# hpc-labo4

./: CMakeLists.txt  main.c  rapport.md
src/: exercice.c
